--- a/source/webapp/templates/food_detail.html
+++ b/source/webapp/templates/food_detail.html
@@ -3,4 +3,5 @@
 {% block content %}
     <p>{{ food.name }}</p>
     <img src="{{ food.photo.url }}" alt="Картинка еды">
+    <a href="{% url 'food_delete' food.pk %}">Удалить</a>
 {% endblock %}
