--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -13,7 +13,7 @@
     {% block styles %}{% endblock %}
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,13 +21,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link">Lorem</a>
+                <a href="{% url 'order_list' %}" class="nav-link">Заказы</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'user_list' %}" class="nav-link">Пользователи</a>
             </li>
             {% block menu %}{% endblock %}
         </ul>
     </div>
 </nav>
-<div class="container">
+<div class="container mt-3">
     {% block content %}{% endblock %}
 </div>
 <script src="{% static 'js/jquery.min.js' %}"></script>
