--- a/source/webapp/templates/food_delete.html
+++ b/source/webapp/templates/food_delete.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Удалить проект{% endblock %}
+{% block title %}Удалить блюдо{% endblock %}
 
 {% block content %}
-    <h1>Удалить проект</h1>
-    <h5>Вы уверены, что хотите удалить проект </h5>
+    <h1>Удалить блюдо</h1>
+    <h5>Вы уверены, что хотите удалить блюдо {{ food.name }}?</h5>
     <form action="{% url 'food_delete' food.pk %}" method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger">Удалить</button>
