Updated base.html, order_create.html, order_detail.html, order_food_create.html,order_food_update.html, order_list.html, user_list.html, style.css and views.py

--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -26,6 +26,15 @@
             <li class="nav-item">
                 <a href="{% url 'user_list' %}" class="nav-link">Пользователи</a>
             </li>
+            <li class="nav-item">
+                <a href="{% url 'food_list' %}" class="nav-link">Блюда</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'food_create' %}" class="nav-link">Добавить блюдо</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'order_create' %}" class="nav-link">Добавить заказ</a>
+            </li>
             {% block menu %}{% endblock %}
         </ul>
     </div>
