--- a/source/webapp/templates/order_detail.html
+++ b/source/webapp/templates/order_detail.html
@@ -1,11 +1,20 @@
 {% extends 'base.html' %}
 {% block title %}Заказ{% endblock %}
 {% block content %}
-    {{ order.contact_phone }}
-    <a href="{% url 'reject_order' order.pk %}">Отменить</a>
-    <a href="{% url 'order_deliver' order.pk %}">Доставить</a>
+    <h4>Заказ № {{ order.pk}}</h4>
+    <p>Статус: {% if order.status == 'new' %}Новый{% elif order.status == 'on_way' %}В пути
+        {% elif order.status == 'preparing' %}Готовится{% elif order.status == 'delivered' %}Доставлен
+        {% else %}Отменен{% endif %}</p>
+    <p>Имя: {{ order.contact_name }}</p>
+    <p>Контактный номер: {{ order.contact_phone }}</p>
+    <p>Адрес доставки: {{ order.delivery_address }}</p>
+    <h4>Корзина:</h4>
     {% for order_food in order.foods.all %}
-        {{ order_food.food.name }}
-
+        <p>{{ order_food.food.name }}, количество: {{ order_food.amount }}</p>
     {% endfor %}
+    {% if order.status != 'canceled'%}<a class="btn-dark p-2" href="{% url 'reject_order' order.pk %}">Отменить</a>{% endif %}
+    {% if order.status != 'canceled' and order.status != 'delivered'%}<a class="btn-dark p-2" href="{% url 'order_deliver' order.pk %}">Взять заказ или доставить</a>{% endif %}
+    <a class="btn-dark p-2" href="{% url 'order_update' order.pk %}">Изменить детали заказа</a>
+    <a class="btn-dark p-2" href="{% url 'order_food_update' order.pk %}">Изменить блюда</a>
+    <a class="btn-dark p-2" href="{% url 'order_food_create' order.pk %}">Добавить блюда</a>
 {% endblock %}
