--- a/source/webapp/templates/order_update.html
+++ b/source/webapp/templates/order_update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Добавить заказ{% endblock %}
+{% block title %}Изменить заказ{% endblock %}
 
 {% block content %}
     {% if order.status == 'delivered' or order.status == 'on_way' %}
@@ -9,7 +9,7 @@
         <form action="{% url 'order_update' order.pk %}" method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Сохранить</button>
+            <button type="submit" class="btn btn-dark">Сохранить</button>
         </form>
     {% endif %}
 {% endblock %}
