--- a/source/webapp/templates/order_food_update.html
+++ b/source/webapp/templates/order_food_update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Добавить заказ{% endblock %}
+{% block title %}Изменить заказ{% endblock %}
 
 {% block content %}
     {% if order.status == 'delivered' or order.status == 'on_way' %}
