--- a/source/webapp/templates/order_detail.html
+++ b/source/webapp/templates/order_detail.html
@@ -2,7 +2,7 @@
 {% block title %}Заказ{% endblock %}
 {% block content %}
     <h4>Заказ № {{ order.pk}}</h4>
-    <p>Статус: {{{ order.get_status_display }}</p>
+    <p>Статус: {{ order.get_status_display }}</p>
     <p>Имя: {{ order.contact_name }}</p>
     <p>Контактный номер: {{ order.contact_phone }}</p>
     <p>Адрес доставки: {{ order.delivery_address }}</p>
