--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -23,27 +23,24 @@
             {% if request.user.is_authenticated %}
                 <li class="nav-item navbar-text">Привет, {{ request.user.username }}!</li>
                 <li class="nav-item">
-                    <a href="{% url 'logout' %}" class="nav-link">Выход</a>
-                </li>
-                <li class="nav-item">
-                    <a href="{% url 'order_list' %}" class="nav-link">На главную</a>
+                    <a href="{% url 'accounts:logout' %}" class="nav-link">Выход</a>
                 </li>
             {% else %}
                 <li class="nav-item">
-                    <a href="{% url 'login' %}" class="nav-link">Вход</a>
+                    <a href="{% url 'accounts:login' %}" class="nav-link">Вход</a>
                 </li>
             {% endif %}
             <li class="nav-item">
-                <a href="{% url 'order_list' %}" class="nav-link">Заказы</a>
+                <a href="{% url 'webapp:order_list' %}" class="nav-link">Заказы</a>
             </li>
             <li class="nav-item">
-                <a href="{% url 'food_list' %}" class="nav-link">Блюда</a>
+                <a href="{% url 'webapp:food_list' %}" class="nav-link">Блюда</a>
             </li>
             <li class="nav-item">
-                <a href="{% url 'food_create' %}" class="nav-link">Добавить блюдо</a>
+                <a href="{% url 'webapp:food_create' %}" class="nav-link">Добавить блюдо</a>
             </li>
             <li class="nav-item">
-                <a href="{% url 'order_create' %}" class="nav-link">Добавить заказ</a>
+                <a href="{% url 'webapp:order_create' %}" class="nav-link">Добавить заказ</a>
             </li>
             {% block menu %}{% endblock %}
         </ul>
