--- a/source/webapp/templates/food_detail.html
+++ b/source/webapp/templates/food_detail.html
@@ -5,6 +5,6 @@
     <p>Название: {{ food.name }}</p>
     <p>Описание: {{ food.description }}</p>
     <p>Цена: {{ food.price }} сом</p>
-    <a class="btn-dark p-1" href="{% url 'food_delete' food.pk %}">Удалить блюдо</a>
-    <a class="btn-dark p-1" href="{% url 'food_update' food.pk %}">Изменить блюдо</a>
+    <a class="btn-dark p-1" href="{% url 'webapp:food_delete' food.pk %}">Удалить блюдо</a>
+    <a class="btn-dark p-1" href="{% url 'webapp:food_update' food.pk %}">Изменить блюдо</a>
 {% endblock %}
