--- a/source/webapp/templates/food_list.html
+++ b/source/webapp/templates/food_list.html
@@ -2,7 +2,7 @@
 {% block title %}Заказы{% endblock %}
 {% block content %}
     {% for food in food_list %}
-        <h4><a href="{% url 'food_detail' food.pk %}">{{ food.name }}</a></h4>
+        <h4><a href="{% url 'webapp:food_detail' food.pk %}">{{ food.name }}</a></h4>
         <p>{{ food.de }}</p>
         <hr>
     {% endfor %}
