--- a/source/webapp/templates/order_food_create.html
+++ b/source/webapp/templates/order_food_create.html
@@ -6,7 +6,7 @@
     {% if order.status == 'delivered' or order.status == 'on_way' %}
         <h2>Заказ уже доставляется или доставлен</h2>
     {% else %}
-        <form action="{% url 'order_food_create' order.pk %}" method="post">
+        <form action="{% url 'webapp:order_food_create' order.pk %}" method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-primary">Сохранить</button>
