--- a/source/webapp/templates/order_list.html
+++ b/source/webapp/templates/order_list.html
@@ -2,11 +2,11 @@
 {% block title %}Заказы{% endblock %}
 {% block content %}
     {% for order in order_list %}
-        <h4><a href="{% url 'order_detail' order.pk %}">Заказ № {{ order.pk }}</a></h4>
+        <h4><a href="{% url 'webapp:order_detail' order.pk %}">Заказ № {{ order.pk }}</a></h4>
         <p>Статус: {{ order.get_status_display }}</p>
-        {% if order.status == 'preparing' %}<a class="btn-dark p-2" href="{% url 'order_deliver' order.pk %}">
+        {% if order.status == 'preparing' %}<a class="btn-dark p-2" href="{% url 'webapp:order_deliver' order.pk %}">
             Взять заказ</a>{% endif %}
-        {% if order.status == 'on_way' %}<a class="btn-dark p-2" href="{% url 'order_deliver' order.pk %}">
+        {% if order.status == 'on_way' %}<a class="btn-dark p-2" href="{% url 'webapp:order_deliver' order.pk %}">
             Доставить заказ</a>{% endif %}
         <hr>
     {% endfor %}
