--- a/source/webapp/templates/food_update.html
+++ b/source/webapp/templates/food_update.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}Добавить блюдо{% endblock %}
 {% block content %}
+    <h4>Изменить блюдо:</h4>
     <form action="{% url 'webapp:food_update' form.instance.pk %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Сохранить</button>
+        <button type="submit" class="btn btn-dark">Сохранить</button>
     </form>
 {% endblock %}
