--- a/source/webapp/templates/food_list.html
+++ b/source/webapp/templates/food_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% for food in food_list %}
         <h4><a href="{% url 'webapp:food_detail' food.pk %}">{{ food.name }}</a></h4>
-        <p>{{ food.de }}</p>
+        <p>{{ food.description }}</p>
         <hr>
     {% endfor %}
 {% endblock %}
