--- a/source/webapp/templates/order_create.html
+++ b/source/webapp/templates/order_create.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Добавить заказ{% endblock %}
-
 {% block content %}
+    <h4>Создать заказ:</h4>
     <form action="{% url 'webapp:order_create' %}" method="post">
         {% csrf_token %}
         {{ formset.media }}
@@ -15,6 +15,6 @@
             </div>
         {% endfor %}
 
-        <button type="submit" class="btn btn-primary">Сохранить</button>
+        <button type="submit" class="btn btn-dark">Сохранить</button>
     </form>
 {% endblock %}
