--- a/source/webapp/templates/order_food_update.html
+++ b/source/webapp/templates/order_food_update.html
@@ -3,13 +3,14 @@
 {% block title %}Изменить заказ{% endblock %}
 
 {% block content %}
+    <h4>Изменить состав заказа:</h4>
     {% if order.status == 'delivered' or order.status == 'on_way' %}
         <h2>Заказ уже доставляется или доставлен</h2>
     {% else %}
         <form action="{% url 'webapp:order_food_update' orderfood.pk %}" method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Сохранить</button>
+            <button type="submit" class="btn btn-dark">Сохранить</button>
         </form>
     {% endif %}
 {% endblock %}
