--- a/source/webapp/templates/order_update.html
+++ b/source/webapp/templates/order_update.html
@@ -3,6 +3,7 @@
 {% block title %}Изменить заказ{% endblock %}
 
 {% block content %}
+    <h4>Изменить заказ:</h4>
     {% if order.status == 'delivered' or order.status == 'on_way' %}
         <h2>Заказ уже доставляется или доставлен</h2>
     {% else %}
