Реализованы функции добавления, редактрирования и удаления блюд в заказе с помощью AJAX.

--- a/source/webapp/templates/order_detail.html
+++ b/source/webapp/templates/order_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Заказ{% endblock %}
 {% block content %}
     <h4><b>Заказ № {{ order.pk }}</b></h4>
@@ -8,23 +9,58 @@
     <p><b>Адрес доставки:</b> {{ order.delivery_address }}</p>
     <hr>
     <h4><b>Корзина:</b></h4>
-    {% for order_food in order.foods.all %}
-        <p>{{ order_food.food.name }}, количество: {{ order_food.amount }}</p>
-        {% if perms.webapp.change_orderfood %}
-            <a class="btn btn-dark" href="{% url 'webapp:order_food_update' order_food.pk %}">Изменить блюдо</a>
-        {% endif %}
-        {% if perms.webapp.delete_orderfood %}
-            <a class="btn btn-dark" href="{% url 'webapp:order_food_delete' order_food.pk %}">Удалить блюдо</a>
-        {% endif %}
-        <hr>
-    {% endfor %}
+    {% if perms.webapp.add_orderfood %}
+    <p><a class="btn btn-danger" href="{% url 'webapp:order_food_create' order.pk %}" id="order_food_add_link">Добавить</a></p>
+    {% endif %}
+    <ul id="order_food_list">
+        {% for order_food in order.foods.all %}
+            <li id="order_food_{{ order_food.pk }}">
+                <span id="order_food_name_{{ order_food.pk }}" data-food_pk="{{ order_food.food.pk }}">{{ order_food.food.name }}</span>:
+                <span id="order_food_amount_{{ order_food.pk }}">{{ order_food.amount }}</span> шт.
+            {% if perms.webapp.change_orderfood %}
+                (<a class="edit_link" href="{% url 'webapp:order_food_update' order_food.pk %}" data-pk="{{ order_food.pk }}">Изменить</a> /
+            {% endif %}
+            {% if perms.webapp.delete_orderfood %}
+                <a class="delete_link" href="{% url 'webapp:order_food_delete' order_food.pk %}" data-pk="{{ order_food.pk }}">Удалить</a>)
+            {% endif %}
+            </li>
+        {% endfor %}
+    </ul>
     <div class="mb-3">
         {% if perms.webapp.change_order %}
             {% if order.status != 'canceled' %}
                 <a class="btn btn-danger" href="{% url 'webapp:reject_order' order.pk %}">Отменить</a>
             {% endif %}
             <a class="btn btn-danger" href="{% url 'webapp:order_update' order.pk %}">Изменить детали заказа</a>
-            <a class="btn btn-danger" href="{% url 'webapp:order_food_create' order.pk %}">Добавить блюдо</a>
+
         {% endif %}
     </div>
+
+    <div class="modal" tabindex="-1" role="dialog" id="food_edit_modal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Добавить блюда</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="food_form" action="{% url 'webapp:order_food_create' order.pk %}" method="POST">
+                        <div class="text-danger" id="food_form_errors"></div>
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="food_submit">Добавить</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block scripts %}
+    <script type="application/javascript" src="{% static 'js/main.js' %}"></script>
 {% endblock %}
